# AuctionManager

./: .autotools  .cproject  .gitignore  .project  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  libauctionfdtion-0.0.pc.in  libtool
auctioner/src/: AUMProcessor.cpp  AnslpProcessor.cpp  Auctioner.cpp  CtrlComm.cpp  EventSchedulerAuctioner.cpp  Makefile  Makefile.am  Makefile.in  Module.cpp  ModuleLoader.cpp  PageRepository.cpp  ProcModule.cpp  SessionIdSource.cpp  SessionManager.cpp  main.cpp
auctioner/src/.deps/: AUMProcessor.Po  Auctioner.Po  (+18 more)
auctioner/test/: AUMProcessor_test.cpp  AnslpProcessor_test.cpp  Auctioner_test.cpp  Makefile  Makefile.am  Makefile.in
etc/: Makefile.am  ResponseRequestMessage.xml  ResponseRequestMessage2.xml  auctionfile.dtd  bidfile.dtd  example_auctions1.xml  example_auctions2.xml  example_auctions3.xml  example_auctions4.xml  example_auctions5.xml  example_auctions6.xml  example_bid_request.xml  example_bids1.xml  example_bids2.xml  example_bids3.xml  example_bids4.xml  example_bids5.xml  example_bids6.xml  example_resource_request1.xml  example_resource_request2.xml  example_xml_biddingobject.xml  fielddef.dtd  fielddef.xml  fielddef_standard.xml  fieldval.dtd  fieldval.xml  main.html  main_agnt.html  netagnt.conf.dtd  netagnt.conf.xml  netagnt.conf.xml.in  netagnt.thread.conf.xml.in  netaum.conf.dtd  netaum.conf.xml  netaum.conf.xml.in  nsis-ka_agent.conf  nsis.ka.agent.conf.in  resourcerequestfile.dtd
foundation/src/: Allocation.cpp  AllocationIdSource.cpp  AllocationManager.cpp  AnslpClient.cpp  Auction.cpp  AuctionFileParser.cpp  AuctionIdSource.cpp  AuctionManager.cpp  AuctionManagerComponent.cpp  AuctionManagerInfo.cpp  AuctionTimer.cpp  AuctioningObject.cpp  AuctioningObjectManager.cpp  Bid.cpp  BidFileParser.cpp  BidIdSource.cpp  BidManager.cpp  BiddingObject.cpp  BiddingObjectFileParser.cpp  BiddingObjectManager.cpp  CommandLineArgs.cpp  ConfigManager.cpp  ConfigParser.cpp  Constants.cpp  ConstantsAum.cpp  Event.cpp  EventScheduler.cpp  Field.cpp  FieldDefManager.cpp  FieldDefParser.cpp  FieldValParser.cpp  FieldValue.cpp  IdSource.cpp  IpApMessageParser.cpp  Logger.cpp  MAPIAllocationParser.cpp  MAPIAuctionParser.cpp  MAPIBidParser.cpp  MAPIBiddingObjectParser.cpp  MAPIIpApMessageParser.cpp  (+15 more)
foundation/test/: Allocation_Manager_test.cpp  Allocation_test.cpp  AuctionFileParser_test.cpp  AuctionIdSource_test.cpp  AuctionManager_test.cpp  AuctionTimer_test.cpp  Auction_test.cpp  Auctioner_test.cpp  BidFileParser_test.cpp  Bid_Manager_test.cpp  Bid_test.cpp  BiddingObjectFileParser_test.cpp  BiddingObjectManager_test.cpp  BiddingObject_test.cpp  FieldDefParser_test.cpp  FieldValParser_test.cpp  FieldValue_test.cpp  MAPIAllocationParser_test.cpp  MAPIAuctionParser_test.cpp  MAPIBidParser_test.cpp  MAPIBiddingObjectParser_test.cpp  Makefile  Makefile.am  Makefile.in  MessageIdSource_test.cpp  ResourceManager_test.cpp  Timeval_test.cpp  test_runner.cpp
nagtrsh/: Makefile  Makefile.am  Makefile.in  nagtrsh.cpp
nagtrsh/.deps/: nagtrsh.Po
proc_modules/: Makefile  Makefile.am  Makefile.in  ProcError.cpp  ProcModule.cpp  ProcModule.h  bas.cpp  bas.la  bas.so.0  bas.so.0.0.0  bas_la-bas.lo  basuser.cpp
proc_modules/.deps/: ProcError.Plo  ProcModule.Plo  bas_la-bas.Plo
proc_modules/.libs/: bas.la  bas.lai  bas.so.0.0.0
src/: AUMProcessor.cpp  Allocation.cpp  AllocationIdSource.cpp  AllocationManager.cpp  Auction.cpp  AuctionFileParser.cpp  AuctionIdSource.cpp  AuctionManager.cpp  AuctionManagerComponent.cpp  AuctionManagerInfo.cpp  AuctionTimer.cpp  Auctioner.cpp  Bid.cpp  BidFileParser.cpp  BidIdSource.cpp  BidManager.cpp  ConfigManager.cpp  ConfigParser.cpp  Constants.cpp  Event.cpp  EventScheduler.cpp  FieldValue.cpp  Logger.cpp  MAPIAuctionParser.cpp  MAPIBidParser.cpp  Makefile  Makefile.am  Makefile.in  ModuleLoader.cpp  ParserFcts.cpp  ProcModule.cpp  Timeval.cpp  XMLParser.cpp  main.cpp
src/.deps/: AUMProcessor.Po  Allocation.Po  Auction.Po  AuctionIdSource.Po  AuctionManager.Po  AuctionManagerComponent.Po  Auctioner.Po  Bid.Po  BidFileParser.Po  BidIdSource.Po  BidManager.Po  CommandLineArgs.Po  ConfigManager.Po  Constants.Po  ConstantsAum.Po  CtrlComm.Po  Event.Po  EventScheduler.Po  FieldDefParser.Po  FieldValParser.Po  FieldValue.Po  Logger.Po  MAPIBidParser.Po  Module.Po  ModuleLoader.Po  ParserFcts.Po  ProcModule.Po  Timeval.Po  XMLParser.Po  auctionManager-AUMProcessor.Po  auctionManager-Auction.Po  auctionManager-AuctionFileParser.Po  auctionManager-AuctionIdSource.Po  auctionManager-AuctionManager.Po  auctionManager-AuctionManagerComponent.Po  auctionManager-AuctionManagerInfo.Po  auctionManager-AuctionTimer.Po  auctionManager-Auctioner.Po  auctionManager-Bid.Po  auctionManager-BidFileParser.Po  (+25 more)
test/: AUMProcessor_test.cpp  Allocation_test.cpp  AuctionFileParser_test.cpp  AuctionManager_test.cpp  Auctioner_test.cpp  BidFileParser_test.cpp  Bid_Manager_test.cpp  Bid_test.cpp  Event_test.cpp  FieldDefParser_test.cpp  Makefile  Makefile.am  Makefile.in  Timeval_test.cpp  test_runner
test/.deps/: AUMProcessor_test.Po  Allocation_test.Po  AuctionFileParser_test.Po  AuctionIdSource_test.Po  AuctionManager_test.Po  AuctionTimer_test.Po  Auctioner_test.Po  BidFileParser_test.Po  Bid_Manager_test.Po  Bid_test.Po  FieldDefParser_test.Po  FieldValParser_test.Po  FieldValue_test.Po  Timeval_test.Po  test_runner.Po
user_agent/src/: Agent.cpp  AgentManagerInfo.cpp  AgentProcessor.cpp  AgentSession.cpp  AgentSessionManager.cpp  AnslpProcessor.cpp  ConstantsAgent.cpp  CtrlComm.cpp  Event.cpp  EventSchedulerAgent.cpp  MAPIResourceRequestParser.cpp  Makefile  Makefile.am  Makefile.in  PageRepository.cpp  ResourceRequest.cpp  ResourceRequestFileParser.cpp  ResourceRequestIdSource.cpp  ResourceRequestManager.cpp  TextResourceRequestParser.cpp  main.cpp  netagent
user_agent/test/: AgentProcessor_test.cpp  AgentThreaded_test.cpp  Agent_test.cpp  Makefile  Makefile.am  Makefile.in  ResourceRequestFileParser_test.cpp  ResourceRequestManager_test.cpp  ResourceRequest_test.cpp  test_runner
(+444 files in other folders)
